读取xml文件方法

--- a/files/xml/Web.Config
+++ b/files/xml/Web.Config
@@ -14,5 +14,6 @@
     <port>587</port>
     <userName>xxx@qq.com</userName>
     <password>xxx</password>
+    <autoSendTime>7</autoSendTime>
   </emailConfig>
 </configuration>
